--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "server": "nodemon index.js",
-    "api": "echo 'Local API listening on PORT 5000' & json-server --watch api/db.json -p 5000 -q",
+    "api": "echo 'Local API listening on PORT 5000' & json-server --watch api/db.json -p 5000 -q --host 0.0.0.0",
     "start": "concurrently \"npm run server\" \"npm run api\""
   },
   "author": "",
